# pico_sx1278

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/sx1278_receive/: CMakeLists.txt  sx1278_receive.c
examples/sx1278_send/: CMakeLists.txt  sx1278_send.c
lib/: CMakeLists.txt
lib/include/: logger.h  sx1278.h  sx1278_registers.h
lib/source/: sx1278.c
unittests/: CMakeLists.txt  unittest.c
